--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_spinkit: ^4.1.2
   image_picker: ^0.6.7+4
   flutter_time_picker_spinner: ^1.0.6+1
+  android_alarm_manager: ^0.4.5+11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
