--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   image_picker: ^0.6.7+4
   flutter_time_picker_spinner: ^1.0.6+1
   android_alarm_manager: ^0.4.5+11
+  shared_preferences: ^0.5.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
