--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_time_picker_spinner: ^1.0.6+1
   android_alarm_manager: ^0.4.5+11
   shared_preferences: ^0.5.8
+  flutter_local_notifications: ^1.4.4+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
