--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_time_picker_spinner: ^1.0.6+1
   android_alarm_manager: ^0.4.5+11
   shared_preferences: ^0.5.8
+  assets_audio_player: ^2.0.9+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -69,6 +70,7 @@ flutter:
      - assets/icons/burger_t.png
      - assets/icons/meal.png
      - assets/icons/AddPicture.png
+     - assets/sounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
