--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,9 @@ dependencies:
   flutter_spinkit: ^4.1.2
   image_picker: ^0.6.7+4
   flutter_time_picker_spinner: ^1.0.6+1
-  android_alarm_manager: ^0.4.5+11
-  shared_preferences: ^0.5.8
   assets_audio_player: ^2.0.9+2
+  flutter_local_notifications: ^1.4.4+4
+  rxdart: ^0.24.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
